--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6rA-by-0Rf">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="44" width="449" height="44"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06A-0L-wF1">
-                                        <rect key="frame" x="16" y="1" width="42" height="42"/>
+                                        <rect key="frame" x="8" y="1" width="42" height="42"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="06A-0L-wF1" secondAttribute="height" multiplier="1:1" id="3Fz-pJ-Isl"/>
                                             <constraint firstAttribute="width" constant="42" id="t4N-h9-wqq"/>
@@ -43,7 +43,7 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="06A-0L-wF1" secondAttribute="bottom" constant="1" id="6lN-bb-EFh"/>
                                     <constraint firstItem="rav-1E-Tey" firstAttribute="top" secondItem="ppK-GG-W2F" secondAttribute="top" constant="8" id="Aqw-1g-tWw"/>
-                                    <constraint firstItem="06A-0L-wF1" firstAttribute="leading" secondItem="ppK-GG-W2F" secondAttribute="leading" constant="16" id="bkK-3Z-QGF"/>
+                                    <constraint firstItem="06A-0L-wF1" firstAttribute="leading" secondItem="ppK-GG-W2F" secondAttribute="leading" constant="8" id="bkK-3Z-QGF"/>
                                     <constraint firstAttribute="bottom" secondItem="rav-1E-Tey" secondAttribute="bottom" constant="9" id="cxk-fu-Orn"/>
                                     <constraint firstItem="06A-0L-wF1" firstAttribute="top" secondItem="ppK-GG-W2F" secondAttribute="top" constant="1" id="hEe-sg-K4T"/>
                                 </constraints>
@@ -262,6 +262,123 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="92.753623188405811" y="52.901785714285715"/>
+        </scene>
+        <!--Join Name View Controller-->
+        <scene sceneID="vtx-tL-p3Z">
+            <objects>
+                <viewController storyboardIdentifier="JoinNameViewController" id="6rA-by-0Rf" customClass="JoinNameViewController" customModule="Cardna_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="w23-aV-s2C">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hwb-xj-kgM">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="26f-Bz-1Up">
+                                        <rect key="frame" x="8" y="1" width="42" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="42" id="6zx-3J-DST"/>
+                                            <constraint firstAttribute="height" constant="42" id="qAa-dv-Mjl"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="icbtBack" title=""/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="26f-Bz-1Up" firstAttribute="leading" secondItem="hwb-xj-kgM" secondAttribute="leading" constant="8" id="A82-NS-0fP"/>
+                                    <constraint firstAttribute="bottom" secondItem="26f-Bz-1Up" secondAttribute="bottom" constant="1" id="EQX-kj-9ts"/>
+                                    <constraint firstItem="26f-Bz-1Up" firstAttribute="top" secondItem="hwb-xj-kgM" secondAttribute="top" constant="1" id="PNW-Rk-Wm2"/>
+                                    <constraint firstAttribute="height" constant="44" id="jnz-a3-Ig8"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름을 알려주세요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="myo-C4-zvG">
+                                <rect key="frame" x="16" y="104" width="179" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="179" id="Hgj-vb-0HX"/>
+                                    <constraint firstAttribute="height" constant="36" id="nTc-Hv-gzn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="원활한 서비스 이용을 위해 실명으로 적어주세요 :)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7V-rd-8Eo">
+                                <rect key="frame" x="16" y="144" width="331" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="nYy-Tv-0g1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.42352941176470588" green="0.42352941176470588" blue="0.42352941176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ad1-PU-cz2">
+                                <rect key="frame" x="16" y="197" width="382" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="EF4-a6-igx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xvC-5E-tly">
+                                <rect key="frame" x="16" y="227" width="382" height="1"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="OhF-Eg-bdM"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/3" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nGX-ZP-mhm">
+                                <rect key="frame" x="372.5" y="231" width="25.5" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="dFE-hu-Ymo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTJ-OI-CVJ">
+                                <rect key="frame" x="16" y="283" width="382" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="6rC-UK-3q6"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="확인"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ucK-jG-3ah"/>
+                        <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="j7V-rd-8Eo" firstAttribute="leading" secondItem="ucK-jG-3ah" secondAttribute="leading" constant="16" id="00z-cq-bJ7"/>
+                            <constraint firstItem="myo-C4-zvG" firstAttribute="leading" secondItem="ucK-jG-3ah" secondAttribute="leading" constant="16" id="0ed-C9-Il6"/>
+                            <constraint firstItem="ucK-jG-3ah" firstAttribute="trailing" secondItem="nGX-ZP-mhm" secondAttribute="trailing" constant="16" id="1YH-s3-jnI"/>
+                            <constraint firstItem="hwb-xj-kgM" firstAttribute="leading" secondItem="ucK-jG-3ah" secondAttribute="leading" id="3WA-Su-w54"/>
+                            <constraint firstItem="ucK-jG-3ah" firstAttribute="trailing" secondItem="ad1-PU-cz2" secondAttribute="trailing" constant="16" id="6WV-cE-wRj"/>
+                            <constraint firstItem="pTJ-OI-CVJ" firstAttribute="leading" secondItem="ucK-jG-3ah" secondAttribute="leading" constant="16" id="6Xp-KV-M2X"/>
+                            <constraint firstItem="ucK-jG-3ah" firstAttribute="trailing" secondItem="hwb-xj-kgM" secondAttribute="trailing" id="7jt-hl-dx1"/>
+                            <constraint firstItem="nGX-ZP-mhm" firstAttribute="top" secondItem="xvC-5E-tly" secondAttribute="bottom" constant="3" id="H7T-E8-xaP"/>
+                            <constraint firstItem="pTJ-OI-CVJ" firstAttribute="top" secondItem="xvC-5E-tly" secondAttribute="bottom" constant="55" id="HoF-u3-cfP"/>
+                            <constraint firstItem="hwb-xj-kgM" firstAttribute="top" secondItem="ucK-jG-3ah" secondAttribute="top" id="Igw-CQ-Io6"/>
+                            <constraint firstItem="j7V-rd-8Eo" firstAttribute="top" secondItem="myo-C4-zvG" secondAttribute="bottom" constant="4" id="Lx6-mb-Vcm"/>
+                            <constraint firstItem="ucK-jG-3ah" firstAttribute="trailing" secondItem="xvC-5E-tly" secondAttribute="trailing" constant="16" id="Z4Z-80-dNc"/>
+                            <constraint firstItem="ucK-jG-3ah" firstAttribute="trailing" secondItem="pTJ-OI-CVJ" secondAttribute="trailing" constant="16" id="dnm-kb-Qz6"/>
+                            <constraint firstItem="myo-C4-zvG" firstAttribute="top" secondItem="hwb-xj-kgM" secondAttribute="bottom" constant="16" id="kFc-bk-ck1"/>
+                            <constraint firstItem="xvC-5E-tly" firstAttribute="leading" secondItem="ucK-jG-3ah" secondAttribute="leading" constant="16" id="kgj-zy-iGg"/>
+                            <constraint firstItem="ad1-PU-cz2" firstAttribute="top" secondItem="j7V-rd-8Eo" secondAttribute="bottom" constant="32" id="mgr-Si-nr4"/>
+                            <constraint firstItem="xvC-5E-tly" firstAttribute="top" secondItem="ad1-PU-cz2" secondAttribute="bottom" id="qCZ-jv-6co"/>
+                            <constraint firstItem="ad1-PU-cz2" firstAttribute="leading" secondItem="ucK-jG-3ah" secondAttribute="leading" constant="16" id="vtZ-bL-VCC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="nameCompleteButton" destination="pTJ-OI-CVJ" id="H7W-NM-JKs"/>
+                        <outlet property="nameCountLabel" destination="nGX-ZP-mhm" id="yvn-I3-DxT"/>
+                        <outlet property="nameExplainLabel" destination="j7V-rd-8Eo" id="QVW-Os-eld"/>
+                        <outlet property="nameTextField" destination="ad1-PU-cz2" id="5I9-AN-piK"/>
+                        <outlet property="nameTextFieldUnderLineUIView" destination="xvC-5E-tly" id="zGg-gO-6OH"/>
+                        <outlet property="whatsYourNameLabel" destination="myo-C4-zvG" id="R2Y-C8-aKp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lIC-iJ-kDu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="868" y="53"/>
         </scene>
     </scenes>
     <resources>
