--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6rA-by-0Rf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -238,7 +238,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="AndInExplainLabel" destination="I6f-h5-RUO" id="Tbm-mL-c0e"/>
+                        <outlet property="andInExplainLabel" destination="I6f-h5-RUO" id="DCg-jZ-qEh"/>
                         <outlet property="backButton" destination="06A-0L-wF1" id="Q7i-qK-jaJ"/>
                         <outlet property="emailInputErrorImageView" destination="ho4-Ml-Jfi" id="yJs-Dd-Vxw"/>
                         <outlet property="emailInputErrorLabel" destination="PvW-RS-Mfe" id="qHI-Sj-zaY"/>
