--- a/Cardna-iOS/Cardna-iOS/Source/Scene/SelectCard/SelectCard.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/SelectCard/SelectCard.storyboard
@@ -11,7 +11,7 @@
         <!--Select Card View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="SelectCardViewController" id="Y6W-OH-hqX" customClass="SelectCardViewController" customModule="Cardna_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SelectCardViewController" hidesBottomBarWhenPushed="YES" id="Y6W-OH-hqX" customClass="SelectCardViewController" customModule="Cardna_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,6 +26,9 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="icbtBack"/>
+                                        <connections>
+                                            <action selector="backButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="vRo-Af-LXP"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="대표카드 수정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBu-Ds-2Tz">
                                         <rect key="frame" x="160.5" y="11.5" width="93" height="21"/>
@@ -40,7 +43,7 @@
                                         <buttonConfiguration key="configuration" style="plain" title="완료"/>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="XYo-YI-6Ku" firstAttribute="top" secondItem="Oxx-6f-9hB" secondAttribute="top" id="0r1-0x-nvc"/>
                                     <constraint firstItem="VBu-Ds-2Tz" firstAttribute="centerX" secondItem="Oxx-6f-9hB" secondAttribute="centerX" id="9RX-H5-0wF"/>
@@ -63,7 +66,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="heH-G3-SO8" firstAttribute="top" secondItem="wm1-ds-FT1" secondAttribute="top" constant="1" id="4aa-f3-y0m"/>
                                     <constraint firstItem="heH-G3-SO8" firstAttribute="centerX" secondItem="wm1-ds-FT1" secondAttribute="centerX" id="TDM-fi-Sab"/>
@@ -71,7 +74,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="50n-kD-XYd">
-                                <rect key="frame" x="0.0" y="118" width="414" height="744"/>
+                                <rect key="frame" x="0.0" y="118" width="414" height="778"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4LM-ru-Re1">
                                     <size key="itemSize" width="128" height="128"/>
@@ -87,14 +90,15 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVt-dz-5Xa">
                                         <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="icbtSymbolHeartSelect"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="fbtCardpack"/>
                                         <connections>
                                             <action selector="allCardButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="XfP-QW-AU1"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="sVt-dz-5Xa" secondAttribute="bottom" id="2ta-v9-U3c"/>
                                     <constraint firstItem="sVt-dz-5Xa" firstAttribute="top" secondItem="wtl-js-jno" secondAttribute="top" id="45O-Qk-e68"/>
                                     <constraint firstItem="sVt-dz-5Xa" firstAttribute="leading" secondItem="wtl-js-jno" secondAttribute="leading" id="Fuq-pt-zOg"/>
                                     <constraint firstAttribute="bottom" secondItem="sVt-dz-5Xa" secondAttribute="bottom" id="O20-wj-cui"/>
@@ -112,9 +116,9 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="wtl-js-jno" secondAttribute="bottom" constant="50" id="6xg-JK-WiK"/>
                             <constraint firstItem="Oxx-6f-9hB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="A3o-ID-jsF"/>
                             <constraint firstItem="50n-kD-XYd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="CjQ-FM-TtY"/>
+                            <constraint firstAttribute="bottom" secondItem="50n-kD-XYd" secondAttribute="bottom" id="GOw-5m-cwY"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wm1-ds-FT1" secondAttribute="trailing" id="Gfn-pl-AvL"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="50n-kD-XYd" secondAttribute="trailing" id="Km9-eW-hwY"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="50n-kD-XYd" secondAttribute="bottom" id="OZw-SK-cQd"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wtl-js-jno" secondAttribute="trailing" constant="12" id="QPJ-74-PQQ"/>
                             <constraint firstItem="wm1-ds-FT1" firstAttribute="top" secondItem="Oxx-6f-9hB" secondAttribute="bottom" id="R0p-Aa-nIM"/>
                             <constraint firstItem="50n-kD-XYd" firstAttribute="top" secondItem="wm1-ds-FT1" secondAttribute="bottom" id="TsX-Ia-7AT"/>
@@ -122,8 +126,11 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="bgView" destination="5EZ-qb-Rvc" id="sQS-SY-fhU"/>
                         <outlet property="collectionView" destination="50n-kD-XYd" id="OGP-qm-kQM"/>
+                        <outlet property="countBgView" destination="wm1-ds-FT1" id="aBy-fU-hY4"/>
                         <outlet property="countLabel" destination="heH-G3-SO8" id="2t3-HP-JjB"/>
+                        <outlet property="navigationBgView" destination="Oxx-6f-9hB" id="DFv-so-RAM"/>
                         <outlet property="navigationTitle" destination="VBu-Ds-2Tz" id="lfp-XT-QT2"/>
                     </connections>
                 </viewController>
@@ -199,11 +206,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fbtCardpack" width="104" height="104"/>
         <image name="icbtBack" width="42" height="42"/>
-        <image name="icbtSymbolHeartSelect" width="52" height="52"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
