--- a/Cardna-iOS/Cardna-iOS/Source/AppSources/AppXibs/ProfileCollectionViewCell.xib
+++ b/Cardna-iOS/Cardna-iOS/Source/AppSources/AppXibs/ProfileCollectionViewCell.xib
@@ -19,7 +19,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ClJ-mj-EPx">
                         <rect key="frame" x="0.0" y="0.0" width="214" height="265"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icbtBoxbackPurple" translatesAutoresizingMaskIntoConstraints="NO" id="HYq-fJ-jdE">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icbtBoxbackPurple" translatesAutoresizingMaskIntoConstraints="NO" id="HYq-fJ-jdE">
                                 <rect key="frame" x="68" y="24" width="78" height="78"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="78" id="6C9-Pz-7vu"/>
