[#77] 이메일로 친구 검색 서버 연결

--- a/Cardna-iOS/Cardna-iOS/Source/Scene/EmailSearch/EmailSearch.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/EmailSearch/EmailSearch.storyboard
@@ -34,7 +34,7 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이메일 검색" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SaH-Yg-HpO">
                                                 <rect key="frame" x="57" y="13.5" width="319" height="18.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                                             </textField>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBrownColor"/>
